syntax = "proto3";

option java_package = "com.proto.prime";
option java_multiple_files = true;

message PrimeFactoryRequest {
  int32 number = 1;
}

message PrimeFactoryResponse {
  int32 prime = 1;
}

service PrimeFactory {
  rpc PrimeDecomposition(PrimeFactoryRequest) returns (stream PrimeFactoryResponse) {};
}